# ai_lab

./: .gitignore  LICENSE  README.md
inventories/: hosts.yml
playbooks/: local_llm_stack.yml  pre_requisites.yml  resize_root_lvm.yml  upgrade_python3_raw.yml
roles/llm_stack/defaults/: main.yml
roles/llm_stack/files/: pyproject.toml
roles/llm_stack/handlers/: main.yml
roles/llm_stack/tasks/: assert_smol-agent.yml  install_docker.yml  install_ollama.yml  install_openwebui.yml  install_poetry.yml  install_smol-agent.yml  install_smol-developer.yml  main.yml  pre_requisites.yml  pull_codeLlama.yml  pull_codellama.yml  pull_llm.yml  summary.yml
roles/llm_stack/templates/: ollama_agent.py.j2  openai_agent.py.j2
roles/llm_stack/tests/: test.yml
roles/llm_stack/vars/: main.yml
roles/pre_requisites/tasks/: install_docker.yml  main.yml  pre_requisites.yml
roles/pre_requisites/tests/: test.yml
