[tool.poetry]
name = "smol-dev"
version = "0.0.3"
description = "Python module of smol developer"
authors = ["swyx <swyx@dontemail.me>"]
license = "MIT"
readme = "readme.md"
packages = [{ include = "smol_dev" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
openai = "^0.27.8"
openai-function-call = "^0.0.5"
tenacity = "^8.2.2"
agent-protocol = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
src = "src.__main__:main"
api = "smol_dev.api:main"

[tool.poetry.urls]
homepage = "https://github.com/smol-ai/developer"
bugtracker = "https://github.com/smol-ai/developer/issues"